--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "blazy": "^1.8.2",
     "contentful": "^5.0.5",
     "cssnano": "^3.10.0",
+    "gsap": "^2.0.1",
     "gulp-cssnano": "^2.1.2",
     "gulp-uglifycss": "^1.0.9",
     "pixrem": "^4.0.1"
