--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,20 +1,9 @@
-name: CI
-
-on:
-  push:
-    paths:
-      - '*'
-    branches:
-    - master
-jobs:
-  build:
-
-    runs-on: ubuntu-latest
-    
+name: Compress images
 on: push
 jobs:
   build:
     name: calibreapp/image-actions
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
       - name: calibreapp/image-actions
