--- a/.github/workflows/image-actions.yml
+++ b/.github/workflows/image-actions.yml
@@ -1,4 +1,13 @@
 on: push
+ build:
+    name: calibreapp/image-actions
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+      - name: calibreapp/image-actions
+        uses: docker://calibreapp/github-image-actions
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 jpeg:
   quality: 80
 png:
