--- a/.github/workflows/image-actions.yml
+++ b/.github/workflows/image-actions.yml
@@ -1,12 +1,5 @@
 on: push
-    name: calibreapp/image-actions
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@master
-      - name: calibreapp/image-actions
-        uses: docker://calibreapp/github-image-actions
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    name: image-actions
 jpeg:
   quality: 80
 png:
